@@ -1,4 +1,6 @@
 2.8 beta
+    - Added markers \filename and \filepath for .begin.layout files in order to output the
+      name or full path of the bib file of the exported database.
     - Fixed possible array index exception in LastPage formatter.
     - Improved author/editor normalization in entry editor.
     - Added metadata extraction from text when PDFs are dragged into JabRef.
